prometheus-nodeport.yaml
# prometheus-nodeport.yaml
# Dedicated NodePort Service for Prometheus on Port 30090

apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus-kube-prometheus-prometheus
  ports:
    - name: http-mesh
      port: 9090
      targetPort: 9090
      nodePort: 30090
